--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/RetoDB1
+spring.datasource.username=userReto1
+spring.datasource.password=Elorrieta
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8065
