User y Song funcionando correctamente, falta implementar excepciones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/RetoDB1
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Reto1DB
 spring.datasource.username=userReto1
 spring.datasource.password=Elorrieta
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
