Cambios para utilizar el token (faltan cosas)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=userReto1
 spring.datasource.password=Elorrieta
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8065
+app.jwt.secret=sdsdfsdgfgdfghghjhjgujk
